set up board and site css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,49 @@
   <head>
     <title>TicTacToe</title>
     <meta charset="UTF-8" />
+    <script
+      src="https://kit.fontawesome.com/5c60b333ef.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="reset.css" type="text/css" />
     <link rel="stylesheet" href="main.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
+    <header>Tic Tac Toe</header>
+
+    <div class="game">
+      <div class="board">
+        <div class="square" data-boxNum="1"></div>
+        <div class="square" data-boxNum="2"></div>
+        <div class="square" data-boxNum="3"></div>
+        <div class="square" data-boxNum="4"></div>
+        <div class="square" data-boxNum="5"></div>
+        <div class="square" data-boxNum="6"></div>
+        <div class="square" data-boxNum="7"></div>
+        <div class="square" data-boxNum="8"></div>
+        <div class="square" data-boxNum="9"></div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="foot">
+        <a target="_blank" href="https://github.com/GreenRamSilgen"
+          ><i
+            class="fab fa-github-square fa-lg foot__icons"
+            title="My Github"
+          ></i
+        ></a>
+        <a target="_blank" href="https://github.com/GreenRamSilgen/WebTicTacToe"
+          ><i class="fas fa-code fa-lg foot__icons" title="Source Code"></i
+        ></a>
+      </div>
+    </footer>
   </body>
+
   <script src="main.js"></script>
 </html>
