--- a/index.html
+++ b/index.html
@@ -15,37 +15,52 @@
     />
   </head>
 
-  <body>
-    <header>Tic Tac Toe</header>
+  <div class="bg">
+    <body>
+      <header>Tic Tac Toe</header>
 
-    <div class="game">
-      <div class="board">
-        <div class="square" data-boxNum="0"></div>
-        <div class="square" data-boxNum="1"></div>
-        <div class="square" data-boxNum="2"></div>
-        <div class="square" data-boxNum="3"></div>
-        <div class="square" data-boxNum="4"></div>
-        <div class="square" data-boxNum="5"></div>
-        <div class="square" data-boxNum="6"></div>
-        <div class="square" data-boxNum="7"></div>
-        <div class="square" data-boxNum="8"></div>
+      <div class="game">
+        <div class="board">
+          <div class="square" data-boxNum="0"></div>
+          <div class="square" data-boxNum="1"></div>
+          <div class="square" data-boxNum="2"></div>
+          <div class="square" data-boxNum="3"></div>
+          <div class="square" data-boxNum="4"></div>
+          <div class="square" data-boxNum="5"></div>
+          <div class="square" data-boxNum="6"></div>
+          <div class="square" data-boxNum="7"></div>
+          <div class="square" data-boxNum="8"></div>
+        </div>
+      </div>
+      <div class="options">
+        <div class="options__holder">
+          <button class="optionBtn reset">Reset</button>
+        </div>
+      </div>
+      <footer>
+        <div class="foot">
+          <a target="_blank" href="https://github.com/GreenRamSilgen"
+            ><i
+              class="fab fa-github-square fa-lg foot__icons"
+              title="My Github"
+            ></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://github.com/GreenRamSilgen/WebTicTacToe"
+            ><i class="fas fa-code fa-lg foot__icons" title="Source Code"></i
+          ></a>
+        </div>
+      </footer>
+    </body>
+
+    <!-- Modal Section-->
+    <div class="bg-modal">
+      <div class="modal__content">
+        <div class="close">+</div>
       </div>
     </div>
-
-    <footer>
-      <div class="foot">
-        <a target="_blank" href="https://github.com/GreenRamSilgen"
-          ><i
-            class="fab fa-github-square fa-lg foot__icons"
-            title="My Github"
-          ></i
-        ></a>
-        <a target="_blank" href="https://github.com/GreenRamSilgen/WebTicTacToe"
-          ><i class="fas fa-code fa-lg foot__icons" title="Source Code"></i
-        ></a>
-      </div>
-    </footer>
-  </body>
-
+  </div>
+  <!-- Modal Section-->
   <script src="main.js"></script>
 </html>
